--- a/ppl.ipynb
+++ b/ppl.ipynb
@@ -42,7 +42,6 @@
     "        _list_: [output tensor1, output tensor2, output tensor3.]\n",
     "        \n",
     "    \"\"\"\n",
-    "    import numpy as np\n",
     "    output_list = np.sort(os.listdir(path))\n",
     "    output = []\n",
     "    for i in output_list:\n",
@@ -64,6 +63,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1） 变量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMG_SIZE = 320\n",
+    "IMG_PATH = r'./20230703/0_frame_000000000.bmp'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -76,7 +92,7 @@
     "    # 2. 按照1中的最小缩放比例对图像个相同性缩放；\n",
     "    # 3. padding到想要的尺寸；\n",
     "    \n",
-    "    # Resize and pad image while meeting stride-multiple constraints\n",
+    "    # Resize and pad image while meeting stride-multiple constraints  调整图像大小并填充图像，同时满足跨步数约束；\n",
     "    shape = img.shape[:2]  # current shape [height, width]\n",
     "    if isinstance(new_shape, int):  \n",
     "        new_shape = (new_shape, new_shape)\n",
@@ -230,6 +246,10 @@
     "        \n",
     "\n",
     "def yolov5_post_process(input_data):\n",
+    "    masks = [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
+    "    anchors = [[17, 21], [23, 36], [32, 57], \n",
+    "               [40, 98], [54, 136], [68, 189], \n",
+    "               [80, 122], [93, 249], [114, 167]]\n",
     "    boxes, classes, scores = [], [], []\n",
     "    for input, mask in zip(input_data, masks):\n",
     "        b, c, s = process(input, mask, anchors)\n",
@@ -7094,7 +7114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('IMX500')",
+   "display_name": "Python 3.8.16 ('ISV_training')",
    "language": "python",
    "name": "python3"
   },
@@ -7108,12 +7128,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a6898330a772008c0efb32b6e51c3fb8f855e3228c7dbee5aae70bc6dd7211e8"
+    "hash": "043aaae264bf1a186a2096e6a0ccd42b48d0f10b8448d376c628b4c135ebd7dc"
    }
   }
  },
