--- a/tflite_inference.ipynb
+++ b/tflite_inference.ipynb
@@ -329,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('ISV_training')",
+   "display_name": "Python 3.6.13 ('AI_env_TF')",
    "language": "python",
    "name": "python3"
   },
@@ -343,12 +343,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "043aaae264bf1a186a2096e6a0ccd42b48d0f10b8448d376c628b4c135ebd7dc"
+    "hash": "b4cc0dc986b19ae6fe037aa86599ba1d74ac16f91af58e4b46471c2c1b461759"
    }
   }
  },
